--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,9 @@
   "permissions": ["activeTab", "declarativeContent", "storage", "tabs"],
   "options_page": "options.html",
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "page_action": {
-    "default_popup": "popup.html",
+  "action": {
     "default_icon": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
@@ -23,5 +21,5 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "manifest_version": 2
+  "manifest_version": 3
 }
