--- a/manifest.json
+++ b/manifest.json
@@ -12,17 +12,17 @@
   },
   "action": {
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/groupie-16.png",
+      "32": "images/groupie-32.png",
+      "48": "images/groupie-48.png",
+      "128": "images/groupie-128.png"
     }
   },
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/groupie-16.png",
+    "32": "images/groupie-32.png",
+    "48": "images/groupie-48.png",
+    "128": "images/groupie-128.png"
   },
   "manifest_version": 3,
   "commands": {
