--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -43,7 +43,7 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "generated"
+          git commit --amend -m "Generated: $(date)"
           git push origin gh-pages
 
 
